# task-manager

./: .gitignore  README.md  app.py  filters.py  migrate_db.py  models.py  pyproject.toml  requirements.txt  services.py  setup.py  start.sh
static/css/: styles.css
static/js/: app.js  charts.js
templates/: analytics.html  categories_fragment.html  index.html  task_detail.html  tasks_fragment.html
